<resources>
    <string name="app_name">Simastekom - Admin</string>
    <string name="text_user">Pengguna</string>
    <string name="text_classes">Kelas</string>
    <string name="text_profile">Profil</string>
    <string name="text_action">Aksi</string>
    <string name="text_admin">Admin</string>
    <string name="text_student">Mahasiswa</string>
    <string name="text_lecturer">Dosen</string>
    <string name="text_admin_data">Data Admin</string>
    <string name="text_student_data">Data Mahasiswa</string>
    <string name="text_lecturer_data">Data Dosen</string>
    <string name="text_login">Login</string>
    <string name="text_logout">Logout</string>
    <string name="text_login_failed">Login Gagal</string>
    <string name="text_login_again">Login Ulang</string>
    <string name="text_logout_failed">Logout Gagal</string>
    <string name="text_get_token_via_email">Dapatkan Token Melalui Email</string>
    <string name="text_label_token">Token</string>
    <string name="text_hint_token">Masukkan token valid anda…</string>
    <string name="text_instruction_token_reset_password_1">Masukkan token atau kode konfirmasi 6 digit yang kami kirimkan ke email anda yaitu:</string>
    <string name="text_instruction_token_reset_password_2">Mungkin butuh waktu sampai satu menit bagi Anda untuk menerima kode ini. Jika Anda tidak melihat email ini di kotak masuk Anda dalam waktu 15 menit, cari di folder spam Anda. Jika Anda menemukannya di sana, tolong tandai email tersebut sebagai \"Bukan Spam\".</string>
    <string name="text_verify_token">Verifikasi Token</string>
    <string name="text_change_photo">Ganti Foto</string>
    <string name="text_delete_photo">Hapus Foto</string>
    <string name="text_label_id_username">Nama Pengguna</string>
    <string name="text_hint_id_username">Masukkan nama pengguna anda…</string>
    <string name="text_label_password">Password</string>
    <string name="text_label_old_password">Password Lama</string>
    <string name="text_label_new_password">Password Baru</string>
    <string name="text_label_confirm_password">Konfirmasi Password</string>
    <string name="text_label_confirm_new_password">Konfirmasi Password Baru</string>
    <string name="text_hint_password">Masukkan password anda…</string>
    <string name="text_hint_old_password">Masukkan password lama anda…</string>
    <string name="text_hint_new_password">Masukkan password baru anda…</string>
    <string name="text_hint_confirm_password">Ketik ulang password anda…</string>
    <string name="text_hint_confirm_new_password">Ketik ulang password baru anda…</string>
    <string name="text_forgot_password">Lupa Password?</string>
    <string name="text_change_password">Ganti Password</string>
    <string name="text_label_name">Nama</string>
    <string name="text_hint_your_name">Masukkan nama anda…</string>
    <string name="text_hint_name">Masukkan nama…</string>
    <string name="text_label_full_name">Nama Lengkap</string>
    <string name="text_hint_your_fullname">Masukkan nama lengkap anda…</string>
    <string name="text_hint_full_name">Masukkan nama lengkap…</string>
    <string name="text_label_phone">Nomor WA</string>
    <string name="text_hint_phone">Masukkan nomor wa…</string>
    <string name="text_label_email">Email</string>
    <string name="text_hint_email">Masukkan email valid anda…</string>
    <string name="text_error_format_email">Format email harus valid (xxx@xxxx.com)</string>
    <string name="text_label_gender">Jenis Kelamin</string>
    <string name="text_hint_gender">Pilih jenis kelamin…</string>
    <string name="text_hint_your_gender">Pilih jenis kelamin anda…</string>
    <string name="text_label_id_card_number">Nomor KTP</string>
    <string name="text_hint_id_card_number">Masukkan nomor KTP anda…</string>
    <string name="text_label_religion">Agama Kepercayaan</string>
    <string name="text_hint_religion">Pilih agama kepercayaan anda…</string>
    <string name="text_label_place_birth">Kota Lahir</string>
    <string name="text_hint_place_birth">Masukkan kota lahir anda…</string>
    <string name="text_label_date_birth">Tanggal Lahir</string>
    <string name="text_hint_date_birth">Tentukan tanggal lahir anda…</string>
    <string name="text_address_home">Alamat Rumah</string>
    <string name="text_address_home_this">Alamat Rumah ini</string>
    <string name="text_label_province">Provinsi</string>
    <string name="text_hint_province">Masukkan provinsi…</string>
    <string name="text_label_city_regency">Kota/Kabupaten</string>
    <string name="text_hint_city_regency">Masukkan kota/kabupaten…</string>
    <string name="text_label_district">Kecamatan</string>
    <string name="text_hint_district">Masukkan kecamatan…</string>
    <string name="text_label_village">Desa/Kelurahan</string>
    <string name="text_hint_village">Masukkan desa/kelurahan…</string>
    <string name="text_label_rw">RW</string>
    <string name="text_hint_rw">00</string>
    <string name="text_label_rt">RT</string>
    <string name="text_hint_rt">00</string>
    <string name="text_label_street">Nama Jalan, Gedung</string>
    <string name="text_label_address_other_detail">Detail Lainnya</string>
    <string name="text_hint_address_other_detail">Cth: Blok/Unit No./No. Rumah, Patokan</string>
    <string name="text_label_student_id_number">NIM</string>
    <string name="text_hint_student_id_number">Masukkan Nomor Induk Mahasiswa…</string>
    <string name="text_label_batch">Angkatan</string>
    <string name="text_hint_batch">Masukkan angkatan…</string>
    <string name="text_label_class_session">Sesi Kelas</string>
    <string name="text_hint_choose_class_session">Pilih sesi kelas…</string>
    <string name="text_hint_class_session">Masukkan sesi kelas…</string>
    <string name="text_label_semester">Semester</string>
    <string name="text_hint_choose_semester">Pilih semester…</string>
    <string name="text_hint_semester">Masukkan semester…</string>
    <string name="text_label_lecture_method">Metode Kuliah</string>
    <string name="text_hint_choose_lecture_method">Pilih metode kuliah…</string>
    <string name="text_hint_lecture_method">Masukkan metode kuliah…</string>
    <string name="text_label_campus">Kampus</string>
    <string name="text_hint_choose_campus">Pilih kampus…</string>
    <string name="text_hint_campus">Masukkan kampus…</string>
    <string name="text_label_student_status">Status Mahasiswa</string>
    <string name="text_hint_choose_student_status">Pilih status mahasiswa…</string>
    <string name="text_hint_student_status">Masukkan status mahasiswa…</string>
    <string name="text_label_employment_status">Status Pekerjaan</string>
    <string name="text_hint_choose_employment_status">Pilih status pekerjaan…</string>
    <string name="text_hint_employment_status">Masukkan status pekerjaan…</string>
    <string name="text_label_information">Keterangan</string>
    <string name="text_hint_information">Masukkan keterangan…</string>
    <string name="text_label_father_id_card_number">Nomor KTP Ayah</string>
    <string name="text_hint_father_id_card_number">Masukkan nomor KTP ayah anda…</string>
    <string name="text_label_father_name">Nama Ayah</string>
    <string name="text_hint_father_name">Masukkan nama ayah anda…</string>
    <string name="text_label_mother_id_card_number">Nomor KTP Ibu</string>
    <string name="text_hint_mother_id_card_number">Masukkan nomor KTP ibu anda…</string>
    <string name="text_label_mother_name">Nama Ibu</string>
    <string name="text_hint_mother_name">Masukkan nama ibu anda…</string>
    <string name="text_label_parent_occupation">Pekerjaan Orang Tua</string>
    <string name="text_hint_parent_occupation">Masukkan pekerjaan orang tua anda…</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Batal</string>
    <string name="text_edit">Edit</string>
    <string name="text_save">Simpan</string>
    <string name="text_account">Akun</string>
    <string name="text_identity_personal">Identitas Pribadi</string>
    <string name="text_identity_parent">Identitas Orang Tua</string>
    <string name="text_identity_parent_this">Identitas Orang Tua ini</string>
    <string name="text_identity_academic">Identitas Akademik</string>
    <string name="text_identity_academic_data">Data Identitas Akademik</string>
    <string name="text_place_date_birth">Tempat/Tanggal Lahir</string>
    <string name="text_man">Laki-Laki</string>
    <string name="text_woman">Perempuan</string>
    <string name="text_lecturer_mister_format">Bapak Dosen %s</string>
    <string name="text_lecturer_madam_format">Ibu Dosen %s</string>
    <string name="text_with_identity_format">" dengan identitas %1$s"</string>
    <string name="text_student_name_format">Mahasiswa %s</string>
    <string name="text_student_name_parent_format">Orang Tua dari Mahasiswa %s</string>
    <string name="text_admin_name_format">%s</string>
    <string name="text_lecturer_name_format">Dosen %s</string>
    <string name="text_technician">Teknisi</string>
    <string name="text_time_morning">Pagi</string>
    <string name="text_time_afternoon">Siang</string>
    <string name="text_time_Evening">Sore</string>
    <string name="text_time_NIght">Malam</string>
    <string name="text_sign_format">tanda %1$s</string>
    <string name="text_success">Berhasil</string>
    <string name="text_failed">Gagal</string>
    <string name="text_error">Error</string>
    <string name="text_error_format">%1$s Error</string>
    <string name="text_failed_to_connect">Gagal Terhubung</string>
    <string name="text_refresh">Refresh</string>
    <string name="text_loading">Sedang memuat…</string>
    <string name="text_empty_field_format">Masukkan %s anda</string>
    <string name="text_mandatory_field_format">%s wajib diisi</string>
    <string name="text_cannot_be_less_than_format">tidak boleh kurang dari</string>
    <string name="text_min_character_field_format">%s tidak boleh kurang dari %d karakter</string>
    <string name="text_six_digits_field_format">%s harus memiliki %d digit</string>
    <string name="text_alert_create_new_password_format">%1$s membuat password baru</string>
    <string name="text_alert_change_password_format">%1$s mengubah password</string>
    <string name="text_what_you_entered_is_not_correct_format">%1$s yang anda masukkan belum benar</string>
    <string name="text_cannot_contain_spaces_format">%1$s tidak boleh mengandung spasi</string>
    <string name="text_cannot_contain_spaces_early_format">Tidak boleh ada spasi di awal %1$s</string>
    <string name="text_there_cant_be_any_format">%1$s tidak boleh ada %2$s</string>
    <string name="text_please_login_again">Silakan login kembali</string>
    <string name="text_const_unauthorized">unauthorized</string>
    <string name="text_next">Next</string>
    <string name="text_previous">Previous</string>
    <string name="text_buddhism">Budha</string>
    <string name="text_hinduism">Hindu</string>
    <string name="text_islam">Islam</string>
    <string name="text_student_menu">Menu Mahasiswa</string>
    <string name="text_lecturer_menu">Menu Dosen</string>
    <string name="text_degree">Gelar</string>
    <string name="text_campus">Kampus</string>
    <string name="text_hint_degree">Masukkan gelar…</string>
    <string name="text_hint_address">Masukkan alamat…</string>
    <string name="text_delete">Hapus</string>
    <string name="text_label_code">Kode</string>
    <string name="text_hint_code">Masukkan kode…</string>
    <string name="text_max_char_10">Maksimal 10 karakter</string>
    <string name="text_address">Alamat</string>
    <string name="text_label_lecturer_id_number">NIDN</string>
    <string name="text_hint_lecturer_id_number">Masukkan Nomor Induk Dosen Nasional…</string>
    <string name="text_profile_photo">Foto Profil</string>
    <string name="text_address_home_personal">Alamat Rumah Pribadi</string>
    <string name="text_address_home_parent">Alamat Rumah Orang Tua</string>
</resources>