<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/actionFragment"
            android:icon="@drawable/z_ic_action"
            android:title="@string/text_action"
            app:showAsAction="ifRoom" />

    </group>

    <item android:title="@string/text_account">
        <menu>
            <item
                android:id="@+id/passwordEditActivity"
                android:checkable="false"
                android:icon="@drawable/z_ic_lock"
                android:title="@string/text_change_password"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/logoutMenu"
                android:checkable="false"
                android:icon="@drawable/z_ic_logout"
                android:title="@string/text_logout"
                app:showAsAction="ifRoom" />
        </menu>
    </item>

    <item android:title="@string/text_refresh">
        <menu>
            <item
                android:id="@+id/menu_refresh"
                android:checkable="false"
                android:icon="@drawable/z_ic_refresh"
                android:title="@string/text_refresh"
                app:showAsAction="ifRoom" />
        </menu>


    </item>


</menu>