<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_full_name"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:hint="@string/text_label_full_name"
        app:expandedHintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_hint_full_name"
            android:imeOptions="actionNext"
            android:inputType="textCapWords" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_password"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:hint="@string/text_label_password"
        app:endIconMode="password_toggle"
        app:expandedHintEnabled="false"
        app:layout_constraintEnd_toEndOf="@+id/tv_title_new_password"
        app:layout_constraintStart_toStartOf="@+id/tv_title_new_password"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_new_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_hint_password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_confirm_password"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="18dp"
        android:hint="@string/text_label_confirm_password"
        app:endIconMode="password_toggle"
        app:expandedHintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_hint_confirm_password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_lecturer_id_number"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:hint="@string/text_label_lecturer_id_number"
        app:expandedHintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_lecturer_id_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:hint="@string/text_hint_lecturer_id_number"
            android:imeOptions="actionNext"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_degree"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:hint="@string/text_degree"
        app:expandedHintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_degree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_hint_degree"
            android:imeOptions="actionDone"
            android:inputType="textCapWords" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_gender"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:hint="@string/text_label_gender"
        app:endIconDrawable="@drawable/z_ic_pop_up"
        app:endIconMode="custom"
        app:expandedHintEnabled="false">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/text_hint_gender"
            android:inputType="none" />


    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:id="@+id/layout_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/div1"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_marginTop="32dp"
            app:dividerColor="?attr/colorSurfaceContainerHigh" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/btn_profile_picture"
            style="@style/content.MaterialTextView_Button"
            android:text="@string/text_profile_photo" />

        <com.google.android.material.divider.MaterialDivider style="@style/content" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/btn_identity_personal"
            style="@style/content.MaterialTextView_Button"
            android:text="@string/text_identity_personal" />

        <com.google.android.material.divider.MaterialDivider style="@style/content" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/div2"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            app:dividerColor="?attr/colorSurfaceContainerHigh" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_delete"
            style="@style/CustomButtonTextButtonError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:text="@string/text_delete"
            android:textColor="@color/md_theme_error"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_save"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/text_save"
            android:textSize="16sp" />

    </LinearLayout>
</LinearLayout>