<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".ui.student.StudentMenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="24dp">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:navigationIcon="@drawable/z_ic_back"
                app:title="@string/text_student_menu" />

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btn_simastekom_mahasiswa"
            android:layout_margin="24dp"
            style="@style/CustomButtonCardView">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2"
                android:paddingHorizontal="16dp"
                android:background="@drawable/background_gradient">

                <ImageView
                    android:layout_weight="1"
                    android:layout_width="110dp"
                    android:layout_margin="8dp"

                    app:tint="?attr/colorPrimary"
                    android:layout_height="match_parent"
                    android:src="@drawable/z_ic_class" />

                <TextView
                    android:layout_weight="1"
                    android:textSize="24dp"
                    android:layout_margin="8dp"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textColor="?attr/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Simastekom\nMahasiswa" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <Button
            android:id="@+id/btn_student"
            style="@style/CustomButtonFilledMenu"
            android:text="@string/text_student_data" />


        <Button
            android:id="@+id/btn_identity_academic"
            style="@style/CustomButtonTonalMenu"
            android:text="@string/text_identity_academic" />

        <Button
            android:id="@+id/btn_identity_personal"
            style="@style/CustomButtonTonalMenu"
            android:text="@string/text_identity_personal" />

        <Button
            android:id="@+id/btn_identity_parent"
            style="@style/CustomButtonTonalMenu"
            android:text="@string/text_identity_parent" />

        <Button
            android:id="@+id/btn_student_status"
            style="@style/CustomButtonTonalMenu"
            android:text="@string/text_label_student_status"/>


        <Button
            android:id="@+id/btn_employment_status"
            style="@style/CustomButtonTonalMenu"
            android:text="@string/text_label_employment_status"/>



        <Button
            android:id="@+id/btn_address_home_personal"
            style="@style/CustomButtonTonalMenu"
            android:text="@string/text_address_home_personal"/>

        <Button
            android:id="@+id/btn_address_home_parent"
            style="@style/CustomButtonTonalMenu"
            android:text="@string/text_address_home_parent"/>











    </LinearLayout>

</ScrollView>