<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:scrollbars="none"
tools:context=".ui.lecturer.LecturerMenuActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="24dp">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:navigationIcon="@drawable/z_ic_back"
            app:title="@string/text_lecturer_menu" />

    </com.google.android.material.appbar.AppBarLayout>

    <Button
        android:id="@+id/btn_lecturer"
        style="@style/CustomButtonFilledMenu"
        android:text="@string/text_lecturer_data" />

    <Button
        android:id="@+id/btn_identity_personal"
        style="@style/CustomButtonTonalMenu"
        android:text="@string/text_identity_personal" />

    <Button
        android:id="@+id/btn_address_home_personal"
        style="@style/CustomButtonTonalMenu"
        android:text="@string/text_address_home_personal"/>

</LinearLayout>

</ScrollView>